End of hackathon, unfinished product.

--- a/AllergyApp/src/theme/variables.scss
+++ b/AllergyApp/src/theme/variables.scss
@@ -35,6 +35,8 @@ $colors: (
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
+$tabs-ios-tab-icon-color-active: rgb(255, 152, 45);
+$tabs-ios-tab-text-color-active: rgb(255, 152, 45);
 
 
 
